Fix windows aligning

--- a/css/home-styles.css
+++ b/css/home-styles.css
@@ -1,7 +1,14 @@
 @import "common-styles.css";
 @import "slider.css";
 
+.main {
+    position: relative;
+}
+
 .main__window {
+    position: absolute;
+    left: 0;
+    top: 0;
     padding: 40px;
     width: 100%;
     min-height: 100vh;
